# N.E.K.O

./: .gitignore  agent_server.py  launcher.py  main_server.py  memory_server.py  monitor.py  pyproject.toml  requirements.txt  tmp_patch.py
app/: memory_server.py
brain/: browser_use_adapter.py  computer_use.py  deduper.py  openclaw_adapter.py  task_executor.py
config/: __init__.py  api_providers.json  prompts_agent.py  prompts_proactive.py  prompts_sys.py  providers.py
docker/: Dockerfile  Dockerfile.full  README_Docker.md  entrypoint.sh  env.template
docs/: api_providers_fields.md  character-guide.md  index.md
main_logic/: core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  session_state.py  tts_client.py
main_routers/: __init__.py  agent_router.py  characters_router.py  config_router.py  cookies_login_router.py  jukebox_router.py  memory_router.py  music_router.py  pages_router.py  shared_state.py  system_router.py  websocket_router.py  workshop_router.py
memory/: __init__.py  cursors.py  event_log.py  outbox.py  persona.py  recent.py  reflection.py  settings.py  timeindex.py
plugin/: PLUGIN_DEVELOPMENT_GUIDE.md  settings.py
static/: Jukebox.js  app-audio-playback.js  app-autostart-prompt.js  app-buttons.js  app-character.js  app-chat-adapter.js  app-chat-avatar.js  app-chat.js  app-crop.js  app-interpage.js  app-proactive.js  app-react-chat-window.js  app-screen.js  app-settings.js  app-state.js  app-tutorial-prompt.js  app-ui.js  app-websocket.js  app.js  avatar-portrait.js  avatar-reaction-bubble.js  avatar-ui-buttons.js  avatar-ui-drag.js  avatar-ui-popup.js  common-ui-hud.js  common_dialogs.js  i18n-i18next.js  live2d-core.js  live2d-interaction.js  live2d-model.js  live2d-ui-drag.js  mmd-core.js  mmd-init.js  mmd-interaction.js  mmd-manager.js  mmd-ui-buttons.js  music_ui.js  subtitle.js  universal-tutorial-manager.js  vrm-init.js  (+2 more)
templates/: api_key_settings.html  card_export.html  card_maker.html  character_card_manager.html  chat.html  (+9 more)
(+362 files in other folders)
